# cfcrawler

./: .gitignore  Cargo.toml  README.md  copy.sh  fast.sh  squid.example.conf
src/: main.rs  proxy.rs  quickcheck.rs  rename.rs
src/fixtures/: api_result_not_speed.txt  badB64.txt  badUtf.txt  decodedB64.txt  trimmed.json
